--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -15,26 +15,21 @@ body {
   height: 100vh; /* 确保根容器占满视口高度 */
 }
 
-.xterm .xterm-viewport {
-  scrollbar-width: thin; /* 用于 Firefox，设置滚动条宽度 */
-  scrollbar-color: #555 #222; /* 滚动条颜色，前景色和背景色 */
-}
-
 /* 针对 WebKit（Chrome、Edge、Safari） */
 .xterm .xterm-viewport::-webkit-scrollbar {
-  width: 4px; /* 滚动条宽度 */
-  height: 4px; /* 滚动条高度（水平滚动条时） */
+  width: 5px; /* 滚动条宽度 */
+  height: 5px; /* 滚动条高度（水平滚动条时） */
 }
 
 .xterm .xterm-viewport::-webkit-scrollbar-thumb {
-  background-color: #555; /* 滚动条滑块颜色 */
+  background-color: #fbfbfb77; /* 滚动条滑块颜色 */
   border-radius: 0px; /* 滚动条滑块圆角 */
 }
 
 .xterm .xterm-viewport::-webkit-scrollbar-thumb:hover {
-  background-color: #888; /* 滑块悬停时的颜色 */
+  background-color: #888888d6; /* 滑块悬停时的颜色 */
 }
 
 .xterm .xterm-viewport::-webkit-scrollbar-track {
-  background-color: #222; /* 滚动条轨道颜色 */
+  background-color: #7b7a7a3e; /* 滚动条轨道颜色 */
 }
