--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -23,7 +23,7 @@ body {
 
 .xterm .xterm-viewport::-webkit-scrollbar-thumb {
   background-color: #fbfbfb77; /* 滚动条滑块颜色 */
-  border-radius: 0px; /* 滚动条滑块圆角 */
+  border-radius: 1px; /* 滚动条滑块圆角 */
 }
 
 .xterm .xterm-viewport::-webkit-scrollbar-thumb:hover {
@@ -31,5 +31,21 @@ body {
 }
 
 .xterm .xterm-viewport::-webkit-scrollbar-track {
+  background-color: #7b7a7a3e; /* 滚动条轨道颜色 */
+}
+
+.file-list::-webkit-scrollbar {
+  width: 10px; /* 滚动条宽度 */
+  height: 10px; /* 滚动条高度（水平滚动条时） */
+}
+.file-list::-webkit-scrollbar-thumb {
+  background-color: #7f7f7f; /* 滚动条滑块颜色 */
+  border-radius: 3px; /* 滚动条滑块圆角 */
+}
+.file-list::-webkit-scrollbar-thumb:hover {
+  background-color: #888888d6; /* 滑块悬停时的颜色 */
+}
+
+.file-list::-webkit-scrollbar-track {
   background-color: #7b7a7a3e; /* 滚动条轨道颜色 */
 }
